apps/dragonwilds/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dragonwilds-server
  namespace: dragonwilds
  annotations:
    lbipam.cilium.io/sharing-key: "lan-shared"
    lbipam.cilium.io/sharing-cross-namespace: "*"
    lbipam.cilium.io/ips: "192.168.1.120"
spec:
  type: LoadBalancer
  selector:
    app: dragonwilds
  ports:
    - name: game
      port: 7780
      protocol: UDP
